fixed drawer overflow and transform

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -12,20 +12,3 @@ body {
 dialog {
 	background: rgba(0, 0, 0, 0.556);
 }
-
-//* Drawer styling *//
-.drawer-content {
-	height: 100%;
-}
-
-.drawer-toggle:checked ~ .drawer-side > .drawer-overlay {
-	visibility: hidden;
-}
-
-.drawer-toggle ~ .drawer-side {
-	overflow-y: auto;
-}
-
-.drawer.drawer-end > .drawer-toggle:checked ~ .drawer-content {
-	--tw-translate-x: 0rem;
-}
